// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component should render avatar without height 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={undefined}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 80,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 80,
                },
                undefined,
                undefined,
              ]
        }
    >
        <TextElement
            style={
                Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 40,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "red",
                    },
                  ]
            }
        >
            avatar title
        </TextElement>
    </View>
</View>,
  "nodes": Array [
    <View
      activeOpacity={undefined}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 80,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 80,
                        },
                        undefined,
                        undefined,
                      ]
            }
      >
            <TextElement
                  style={
                        Array [
                              Object {
                                "backgroundColor": "rgba(0,0,0,0)",
                                "color": "#ffffff",
                                "fontSize": 40,
                                "textAlign": "center",
                              },
                              Object {
                                "color": "red",
                              },
                            ]
                  }
            >
                  avatar title
            </TextElement>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar
        title="avatar title"
        titleStyle={
                Object {
                        "color": "red",
                      }
        }
        width={80}
/>,
      "_debugID": 13,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "title": "avatar title",
          "titleStyle": Object {
            "color": "red",
          },
          "width": 80,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 7,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={undefined}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 80,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 80,
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0)",
                                                    "color": "#ffffff",
                                                    "fontSize": 40,
                                                    "textAlign": "center",
                                                  },
                                                  Object {
                                                    "color": "red",
                                                  },
                                                ]
                              }
                    >
                              avatar title
                    </TextElement>
          </View>
</View>,
        "_debugID": 14,
        "_renderedOutput": <View
          activeOpacity={undefined}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 80,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 80,
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0)",
                                                    "color": "#ffffff",
                                                    "fontSize": 40,
                                                    "textAlign": "center",
                                                  },
                                                  Object {
                                                    "color": "red",
                                                  },
                                                ]
                              }
                    >
                              avatar title
                    </TextElement>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar
    title="avatar title"
    titleStyle={
        Object {
            "color": "red",
          }
    }
    width={80}
/>,
}
`;

exports[`Badge Component should render avatar without width 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 90,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 90,
                },
                undefined,
                undefined,
              ]
        }
    >
        <Image
            source={
                Object {
                    "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                  }
            }
            style={
                Array [
                    Object {
                      "height": 90,
                      "width": 90,
                    },
                    undefined,
                    Object {
                      "backgroundColor": "peru",
                    },
                  ]
            }
        />
    </View>
</View>,
  "nodes": Array [
    <View
      activeOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 90,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 90,
                        },
                        undefined,
                        undefined,
                      ]
            }
      >
            <Image
                  source={
                        Object {
                              "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                            }
                  }
                  style={
                        Array [
                              Object {
                                "height": 90,
                                "width": 90,
                              },
                              undefined,
                              Object {
                                "backgroundColor": "peru",
                              },
                            ]
                  }
            />
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar
        activeOpacity={0.7}
        avatarStyle={
                Object {
                        "backgroundColor": "peru",
                      }
        }
        height={90}
        source={
                Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
        }
/>,
      "_debugID": 11,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "activeOpacity": 0.7,
          "avatarStyle": Object {
            "backgroundColor": "peru",
          },
          "height": 90,
          "source": Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 6,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 90,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 90,
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "height": 90,
                                                    "width": 90,
                                                  },
                                                  undefined,
                                                  Object {
                                                    "backgroundColor": "peru",
                                                  },
                                                ]
                              }
                    />
          </View>
</View>,
        "_debugID": 12,
        "_renderedOutput": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 90,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 90,
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "height": 90,
                                                    "width": 90,
                                                  },
                                                  undefined,
                                                  Object {
                                                    "backgroundColor": "peru",
                                                  },
                                                ]
                              }
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar
    activeOpacity={0.7}
    avatarStyle={
        Object {
            "backgroundColor": "peru",
          }
    }
    height={90}
    source={
        Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
    }
/>,
}
`;

exports[`Badge Component should render large avatar 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 75,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 75,
                },
                Object {
                  "borderRadius": 37.5,
                },
                undefined,
              ]
        }
    >
        <Icon
            color="blue"
            name="name"
            raised={false}
            reverse={false}
            reverseColor="white"
            size={22}
            style={undefined}
            type="type"
            underlayColor="white"
        />
    </View>
</View>,
  "nodes": Array [
    <View
      activeOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 75,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 75,
                        },
                        Object {
                          "borderRadius": 37.5,
                        },
                        undefined,
                      ]
            }
      >
            <Icon
                  color="blue"
                  name="name"
                  raised={false}
                  reverse={false}
                  reverseColor="white"
                  size={22}
                  style={undefined}
                  type="type"
                  underlayColor="white"
            />
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar
        activeOpacity={0.7}
        icon={
                Object {
                        "color": "blue",
                        "name": "name",
                        "size": 22,
                        "type": "type",
                      }
        }
        large={true}
        rounded={true}
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "activeOpacity": 0.7,
          "icon": Object {
            "color": "blue",
            "name": "name",
            "size": 22,
            "type": "type",
          },
          "large": true,
          "rounded": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 75,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 75,
                                        },
                                        Object {
                                          "borderRadius": 37.5,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <Icon
                              color="blue"
                              name="name"
                              raised={false}
                              reverse={false}
                              reverseColor="white"
                              size={22}
                              style={undefined}
                              type="type"
                              underlayColor="white"
                    />
          </View>
</View>,
        "_debugID": 8,
        "_renderedOutput": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 75,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 75,
                                        },
                                        Object {
                                          "borderRadius": 37.5,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <Icon
                              color="blue"
                              name="name"
                              raised={false}
                              reverse={false}
                              reverseColor="white"
                              size={22}
                              style={undefined}
                              type="type"
                              underlayColor="white"
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar
    activeOpacity={0.7}
    icon={
        Object {
            "color": "blue",
            "name": "name",
            "size": 22,
            "type": "type",
          }
    }
    large={true}
    rounded={true}
/>,
}
`;

exports[`Badge Component should render medium avatar 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 50,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 50,
                },
                Object {
                  "borderRadius": 25,
                },
                undefined,
              ]
        }
    >
        <Image
            source={
                Object {
                    "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                  }
            }
            style={
                Array [
                    Object {
                      "height": 50,
                      "width": 50,
                    },
                    Object {
                      "borderRadius": 25,
                    },
                    undefined,
                  ]
            }
        />
    </View>
</View>,
  "nodes": Array [
    <View
      activeOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 50,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 50,
                        },
                        Object {
                          "borderRadius": 25,
                        },
                        undefined,
                      ]
            }
      >
            <Image
                  source={
                        Object {
                              "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                            }
                  }
                  style={
                        Array [
                              Object {
                                "height": 50,
                                "width": 50,
                              },
                              Object {
                                "borderRadius": 25,
                              },
                              undefined,
                            ]
                  }
            />
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar
        activeOpacity={0.7}
        medium={true}
        rounded={true}
        source={
                Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
        }
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "activeOpacity": 0.7,
          "medium": true,
          "rounded": true,
          "source": Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 50,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 50,
                                        },
                                        Object {
                                          "borderRadius": 25,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "height": 50,
                                                    "width": 50,
                                                  },
                                                  Object {
                                                    "borderRadius": 25,
                                                  },
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</View>,
        "_debugID": 6,
        "_renderedOutput": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 50,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 50,
                                        },
                                        Object {
                                          "borderRadius": 25,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "height": 50,
                                                    "width": 50,
                                                  },
                                                  Object {
                                                    "borderRadius": 25,
                                                  },
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar
    activeOpacity={0.7}
    medium={true}
    rounded={true}
    source={
        Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
    }
/>,
}
`;

exports[`Badge Component should render small avatar 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 34,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 34,
                },
                Object {
                  "borderRadius": 17,
                },
                undefined,
              ]
        }
    >
        <Image
            source={
                Object {
                    "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                  }
            }
            style={
                Array [
                    Object {
                      "height": 34,
                      "width": 34,
                    },
                    Object {
                      "borderRadius": 17,
                    },
                    Object {
                      "backgroundColor": "peru",
                    },
                  ]
            }
        />
    </View>
</View>,
  "nodes": Array [
    <View
      activeOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 34,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 34,
                        },
                        Object {
                          "borderRadius": 17,
                        },
                        undefined,
                      ]
            }
      >
            <Image
                  source={
                        Object {
                              "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                            }
                  }
                  style={
                        Array [
                              Object {
                                "height": 34,
                                "width": 34,
                              },
                              Object {
                                "borderRadius": 17,
                              },
                              Object {
                                "backgroundColor": "peru",
                              },
                            ]
                  }
            />
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar
        activeOpacity={0.7}
        avatarStyle={
                Object {
                        "backgroundColor": "peru",
                      }
        }
        rounded={true}
        small={true}
        source={
                Object {
                        "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "activeOpacity": 0.7,
          "avatarStyle": Object {
            "backgroundColor": "peru",
          },
          "rounded": true,
          "small": true,
          "source": Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 34,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 34,
                                        },
                                        Object {
                                          "borderRadius": 17,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "height": 34,
                                                    "width": 34,
                                                  },
                                                  Object {
                                                    "borderRadius": 17,
                                                  },
                                                  Object {
                                                    "backgroundColor": "peru",
                                                  },
                                                ]
                              }
                    />
          </View>
</View>,
        "_debugID": 4,
        "_renderedOutput": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 34,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 34,
                                        },
                                        Object {
                                          "borderRadius": 17,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "height": 34,
                                                    "width": 34,
                                                  },
                                                  Object {
                                                    "borderRadius": 17,
                                                  },
                                                  Object {
                                                    "backgroundColor": "peru",
                                                  },
                                                ]
                              }
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar
    activeOpacity={0.7}
    avatarStyle={
        Object {
            "backgroundColor": "peru",
          }
    }
    rounded={true}
    small={true}
    source={
        Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
    }
/>,
}
`;

exports[`Badge Component should render without issues 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={undefined}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 34,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 34,
                },
                undefined,
                undefined,
              ]
        }
    />
</View>,
  "nodes": Array [
    <View
      activeOpacity={undefined}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 34,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 34,
                        },
                        undefined,
                        undefined,
                      ]
            }
      />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={undefined}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 34,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 34,
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          />
</View>,
        "_debugID": 2,
        "_renderedOutput": <View
          activeOpacity={undefined}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 34,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 34,
                                        },
                                        undefined,
                                        undefined,
                                      ]
                    }
          />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar />,
}
`;

exports[`Badge Component should render xlarge avatar 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    activeOpacity={0.7}
    onLongPress={undefined}
    onPress={undefined}
    style={
        Array [
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
            undefined,
          ]
    }
>
    <View
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "rgba(0,0,0,0.2)",
                  "bottom": 0,
                  "flex": 1,
                  "height": 150,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 150,
                },
                Object {
                  "borderRadius": 75,
                },
                undefined,
              ]
        }
    >
        <TextElement
            style={
                Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 75,
                      "textAlign": "center",
                    },
                    undefined,
                  ]
            }
        >
            avatar title
        </TextElement>
    </View>
</View>,
  "nodes": Array [
    <View
      activeOpacity={0.7}
      onLongPress={undefined}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                  },
                  undefined,
                ]
      }
>
      <View
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "stretch",
                          "backgroundColor": "rgba(0,0,0,0.2)",
                          "bottom": 0,
                          "flex": 1,
                          "height": 150,
                          "justifyContent": "center",
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 150,
                        },
                        Object {
                          "borderRadius": 75,
                        },
                        undefined,
                      ]
            }
      >
            <TextElement
                  style={
                        Array [
                              Object {
                                "backgroundColor": "rgba(0,0,0,0)",
                                "color": "#ffffff",
                                "fontSize": 75,
                                "textAlign": "center",
                              },
                              undefined,
                            ]
                  }
            >
                  avatar title
            </TextElement>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Avatar
        activeOpacity={0.7}
        rounded={true}
        title="avatar title"
        xlarge={true}
/>,
      "_debugID": 9,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "activeOpacity": 0.7,
          "rounded": true,
          "title": "avatar title",
          "xlarge": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 5,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 150,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 150,
                                        },
                                        Object {
                                          "borderRadius": 75,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0)",
                                                    "color": "#ffffff",
                                                    "fontSize": 75,
                                                    "textAlign": "center",
                                                  },
                                                  undefined,
                                                ]
                              }
                    >
                              avatar title
                    </TextElement>
          </View>
</View>,
        "_debugID": 10,
        "_renderedOutput": <View
          activeOpacity={0.7}
          onLongPress={undefined}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "backgroundColor": "transparent",
                                "paddingBottom": 10,
                                "paddingRight": 10,
                                "paddingTop": 10,
                              },
                              undefined,
                            ]
          }
>
          <View
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "alignSelf": "stretch",
                                          "backgroundColor": "rgba(0,0,0,0.2)",
                                          "bottom": 0,
                                          "flex": 1,
                                          "height": 150,
                                          "justifyContent": "center",
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                          "width": 150,
                                        },
                                        Object {
                                          "borderRadius": 75,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0)",
                                                    "color": "#ffffff",
                                                    "fontSize": 75,
                                                    "textAlign": "center",
                                                  },
                                                  undefined,
                                                ]
                              }
                    >
                              avatar title
                    </TextElement>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Avatar
    activeOpacity={0.7}
    rounded={true}
    title="avatar title"
    xlarge={true}
/>,
}
`;
